adicionado um arquivo tempo

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 exercicios/aula_002_10/listas e tabelas.docx
 exercicios/aula_002_10/~$stas e tabelas.docx
 exercicios/aula_002_10/~WRL1317.tmp
+exercicios/aula_002_10/~WRL0003.tmp
