--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ exercicios/aula_002_10/listas e tabelas.docx
 exercicios/aula_002_10/~$stas e tabelas.docx
 exercicios/aula_002_10/~WRL1317.tmp
 exercicios/aula_002_10/~WRL0003.tmp
+exercicios/aula_003/~$aula3.docx
+exercicios/aula_003/~WRL2682.tmp
