--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ exercicios/aula_003/~WRL2682.tmp
 exercicios/aula_003/aula3.docx
 exercicios/aula_003/~WRL0346.tmp
 exercicios/aula_003/aula3.docx
+exercicios/aula_003/aula3.docx
