--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ exercicios/aula_003/aula3.docx
 exercicios/aula_003/~WRL0346.tmp
 exercicios/aula_003/aula3.docx
 exercicios/aula_003/aula3.docx
+exercicios/aula_004/Aula 4.docx
