--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ exercicios/aula_003/aula3.docx
 exercicios/aula_003/aula3.docx
 exercicios/aula_004/Aula 4.docx
 exercicios/aula_004/Aula 4.docx
+exercicios/aula_004/Aula 4.docx
