--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ exercicios/aula_003/aula3.docx
 exercicios/aula_004/Aula 4.docx
 exercicios/aula_004/Aula 4.docx
 exercicios/aula_004/Aula 4.docx
+exercicios/aula_006/Aula 6.docx
