--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ exercicios/aula_004/Aula 4.docx
 exercicios/aula_004/Aula 4.docx
 exercicios/aula_004/Aula 4.docx
 exercicios/aula_006/Aula 6.docx
+exercicios/projeto_001/projeto ifood.txt
