ignore add 3 files

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ exercicios/aula_004/Aula 4.docx
 exercicios/aula_004/Aula 4.docx
 exercicios/aula_006/Aula 6.docx
 exercicios/projeto_001/projeto ifood.txt
+exercicios/projeto_002/ideia/layout2.psd
+exercicios/projeto_002/ideia/parte incial - layout-ideia.jpg
+exercicios/projeto_002/ideia/textos projeto 2.docx
