add files projeto ifood and 1 more

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ exercicios/projeto_001/projeto ifood.txt
 exercicios/projeto_002/ideia/layout2.psd
 exercicios/projeto_002/ideia/parte incial - layout-ideia.jpg
 exercicios/projeto_002/ideia/textos projeto 2.docx
+exercicios/projeto_002/ideia/~$xtos projeto 2.docx
+.gitignore
