--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ exercicios/projeto_002/ideia/parte incial - layout-ideia.jpg
 exercicios/projeto_002/ideia/textos projeto 2.docx
 exercicios/projeto_002/ideia/~$xtos projeto 2.docx
 .gitignore
+exercicios/projeto_002/projeto ifood.txt
