--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ exercicios/projeto_002/ideia/textos projeto 2.docx
 exercicios/projeto_002/ideia/~$xtos projeto 2.docx
 .gitignore
 exercicios/projeto_002/projeto ifood.txt
+exercicios/aula_003/aula3.docx
