--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ exercicios/projeto_002/ideia/~$xtos projeto 2.docx
 .gitignore
 exercicios/projeto_002/projeto ifood.txt
 exercicios/aula_003/aula3.docx
+exercicios/projeto_001/ideia/backupcss.docx
