--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@ exercicios/projeto_002/ideia/~$xtos projeto 2.docx
 exercicios/projeto_002/projeto ifood.txt
 exercicios/aula_003/aula3.docx
 exercicios/projeto_001/ideia/backupcss.docx
+exercicios/projeto_001/ideia/1e5d270c627074a21966cd113c3aa3d1.jpg
+exercicios/projeto_001/ideia/42caaba8aa4026290abff5a2b0e4937c.jpg
+exercicios/projeto_001/ideia/9651.jpg
+exercicios/projeto_001/ideia/449476-PFJP7M-993.ai
+exercicios/projeto_001/ideia/744286a97681debb24bf9236850a906c.jpg
+exercicios/projeto_001/ideia/2226426.ai
+exercicios/projeto_001/ideia/3423907.ai
+exercicios/projeto_001/ideia/attachment_61723222.jpeg
+exercicios/projeto_001/ideia/attachment_61750330.jpeg
+exercicios/projeto_001/ideia/Google-Ad-banner.jpg
+exercicios/projeto_001/ideia/Jewellers-Banner-Ads.jpg
+exercicios/projeto_001/ideia/Shopping-Banners-Set.jpg
