--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ exercicios/projeto_001/ideia/attachment_61750330.jpeg
 exercicios/projeto_001/ideia/Google-Ad-banner.jpg
 exercicios/projeto_001/ideia/Jewellers-Banner-Ads.jpg
 exercicios/projeto_001/ideia/Shopping-Banners-Set.jpg
+exercicios/projeto_002/ideia/Call-23-10.docx
