--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,19 @@ exercicios/projeto_001/ideia/Google-Ad-banner.jpg
 exercicios/projeto_001/ideia/Jewellers-Banner-Ads.jpg
 exercicios/projeto_001/ideia/Shopping-Banners-Set.jpg
 exercicios/projeto_002/ideia/Call-23-10.docx
+exercicios/aula_007/aula-07.docx
+exercicios/aula_011/~WRL2183.tmp
+exercicios/aula_011/~WRL3578.tmp
+exercicios/aula_002_10/github todos alunos.docx
+exercicios/aula_008/~$la_008-apresentacao projeto.docx
+exercicios/aula_008/aula_008-apresentacao projeto.docx
+exercicios/aula_009/~$la-9-git-Thiago melo.docx
+exercicios/aula_009/aula-9-git-Thiago melo.docx
+exercicios/aula_010/MODULO 2.docx
+exercicios/aula_011/~$ula 02.docx
+exercicios/aula_011/Aula 02.docx
+exercicios/aula_012/aula_012.docx
+exercicios/projeto_002/ideia/configuracao pro fontsawsome.jpg
+exercicios/projeto_002/ideia/fresh-breakfast-vegan-bowl-isolated-transparent-background_812337-145.webp
+exercicios/projeto_002/ideia/Healthy-vegan-food-clean-eating-dieting.jpg
+exercicios/projeto_002/ideia/vegan dish.png
