feat: update project - add votes total

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ exercicios/projeto_002/ideia/configuracao pro fontsawsome.jpg
 exercicios/projeto_002/ideia/fresh-breakfast-vegan-bowl-isolated-transparent-background_812337-145.webp
 exercicios/projeto_002/ideia/Healthy-vegan-food-clean-eating-dieting.jpg
 exercicios/projeto_002/ideia/vegan dish.png
+exercicios/aula_012/~$la_012.docx
