--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ exercicios/projeto_002/ideia/fresh-breakfast-vegan-bowl-isolated-transparent-bac
 exercicios/projeto_002/ideia/Healthy-vegan-food-clean-eating-dieting.jpg
 exercicios/projeto_002/ideia/vegan dish.png
 exercicios/aula_012/~$la_012.docx
+exercicios/aula_013/aula_013.docx
+exercicios/aula_013/~$la_013.docx
