update desafio aula 014

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ exercicios/projeto_002/ideia/vegan dish.png
 exercicios/aula_012/~$la_012.docx
 exercicios/aula_013/aula_013.docx
 exercicios/aula_013/~$la_013.docx
+exercicios/aula_013/desafio3_modulo2/teste2.js
+exercicios/aula_014/~$ula014.docx
+exercicios/aula_014/~WRL3559.tmp
+exercicios/aula_014/aula014.docx
