--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ exercicios/aula_013/desafio3_modulo2/teste2.js
 exercicios/aula_014/~$ula014.docx
 exercicios/aula_014/~WRL3559.tmp
 exercicios/aula_014/aula014.docx
+exercicios/aula_015/aula015.docx
+exercicios/aula_016/~$la 016.docx
+exercicios/aula_016/~WRL2575.tmp
+exercicios/aula_016/Aula 016.docx
