update new feat: edit title and description

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ exercicios/aula_015/aula015.docx
 exercicios/aula_016/~$la 016.docx
 exercicios/aula_016/~WRL2575.tmp
 exercicios/aula_016/Aula 016.docx
+exercicios/aula_016/desafio_final_modulo2/code-removeTask.png
+exercicios/aula_016/desafio_final_modulo2/.vscode/settings.json
+exercicios/aula_016/desafio_final_modulo2/teste.js
