--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ exercicios/aula_016/Aula 016.docx
 exercicios/aula_016/desafio_final_modulo2/code-removeTask.png
 exercicios/aula_016/desafio_final_modulo2/.vscode/settings.json
 exercicios/aula_016/desafio_final_modulo2/teste.js
+exercicios/aula_016/~WRL3859.tmp
