add docs to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,11 @@ exercicios/aula_016/desafio_final_modulo2/code-removeTask.png
 exercicios/aula_016/desafio_final_modulo2/.vscode/settings.json
 exercicios/aula_016/desafio_final_modulo2/teste.js
 exercicios/aula_016/~WRL3859.tmp
+exercicios/aula_018/Aula 018.docx
+exercicios/aula_020/~$evisao.docx
+exercicios/aula_020/~WRL0551.tmp
+exercicios/aula_020/aula_020.docx
+exercicios/aula_020/revisao.docx
+exercicios/aula_021/~$ula021.docx
+exercicios/aula_021/~WRL1432.tmp
+exercicios/aula_021/aula021.docx
