add ignore teste.js

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ exercicios/aula_020/revisao.docx
 exercicios/aula_021/~$ula021.docx
 exercicios/aula_021/~WRL1432.tmp
 exercicios/aula_021/aula021.docx
+exercicios/aula_021/teste.js
