add ignore word files

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ exercicios/aula_021/~$ula021.docx
 exercicios/aula_021/~WRL1432.tmp
 exercicios/aula_021/aula021.docx
 exercicios/aula_021/teste.js
+exercicios/aula-revisao02/~$visao02.docx
+exercicios/aula-revisao02/~WRL2938.tmp
+exercicios/aula-revisao02/Revisao02.docx
+exercicios/aula_021/~WRL2511.tmp
