--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,26 @@ exercicios/aula-revisao02/~$visao02.docx
 exercicios/aula-revisao02/~WRL2938.tmp
 exercicios/aula-revisao02/Revisao02.docx
 exercicios/aula_021/~WRL2511.tmp
+exercicios/aula024.docx
+exercicios/aula-revisao03/aula-revisao-03.docx
+exercicios/aula_022/Aula 022.docx
+exercicios/aula_023/aula023.docx
+exercicios/aula_024/aula_024.docx
+exercicios/aula_024/aula_026.docx
+exercicios/projeto_003/package-lock.json
+exercicios/projeto_003/package.json
+exercicios/projeto_003/readme.docx
+exercicios/projeto_003/node_modules/.package-lock.json
+exercicios/projeto_003/node_modules/ansi-regex/license
+exercicios/projeto_003/node_modules/ansi-regex/package.json
+exercicios/projeto_003/node_modules/ansi-regex/readme.md
+exercicios/projeto_003/node_modules/prompt-sync/index.js
+exercicios/projeto_003/node_modules/prompt-sync/LICENSE
+exercicios/projeto_003/node_modules/prompt-sync/package.json
+exercicios/projeto_003/node_modules/prompt-sync/README.md
+exercicios/projeto_003/node_modules/prompt-sync/test.js
+exercicios/projeto_003/node_modules/strip-ansi/index.d.ts
+exercicios/projeto_003/node_modules/strip-ansi/index.js
+exercicios/projeto_003/node_modules/strip-ansi/license
+exercicios/projeto_003/node_modules/strip-ansi/package.json
+exercicios/projeto_003/node_modules/strip-ansi/readme.md
