--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ exercicios/projeto_003/node_modules/strip-ansi/index.js
 exercicios/projeto_003/node_modules/strip-ansi/license
 exercicios/projeto_003/node_modules/strip-ansi/package.json
 exercicios/projeto_003/node_modules/strip-ansi/readme.md
+exercicios/projeto_003/node_modules/ansi-regex/index.js
