update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,54 @@ exercicios/projeto_003/node_modules/strip-ansi/license
 exercicios/projeto_003/node_modules/strip-ansi/package.json
 exercicios/projeto_003/node_modules/strip-ansi/readme.md
 exercicios/projeto_003/node_modules/ansi-regex/index.js
+exercicios/projeto_003/node_modules/console-table-printer/LICENSE
+exercicios/projeto_003/node_modules/console-table-printer/package.json
+exercicios/projeto_003/node_modules/console-table-printer/README.md
+exercicios/projeto_003/node_modules/console-table-printer/dist/index.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/index.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/console-table-printer.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/console-table-printer.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/internalTable/input-converter.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/internalTable/input-converter.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/internalTable/internal-table-printer.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/internalTable/internal-table-printer.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/internalTable/internal-table.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/internalTable/internal-table.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/internalTable/table-pre-processors.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/internalTable/table-pre-processors.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/models/common.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/models/common.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/models/external-table.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/models/external-table.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/models/internal-table.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/models/internal-table.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/utils/colored-console-line.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/utils/colored-console-line.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/utils/console-utils.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/utils/console-utils.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/utils/string-utils.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/utils/string-utils.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/utils/table-constants.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/utils/table-constants.js
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/utils/table-helpers.d.ts
+exercicios/projeto_003/node_modules/console-table-printer/dist/src/utils/table-helpers.js
+exercicios/projeto_003/node_modules/simple-wcswidth/CHANGELOG.md
+exercicios/projeto_003/node_modules/simple-wcswidth/LICENSE
+exercicios/projeto_003/node_modules/simple-wcswidth/package.json
+exercicios/projeto_003/node_modules/simple-wcswidth/README.md
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/index.d.ts
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/index.js
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/src/binary-search.d.ts
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/src/binary-search.js
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/src/models.d.ts
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/src/models.js
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/src/non-spacing-chars.d.ts
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/src/non-spacing-chars.js
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/src/wcswidth.d.ts
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/src/wcswidth.js
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/src/wcwidth.d.ts
+exercicios/projeto_003/node_modules/simple-wcswidth/dist/src/wcwidth.js
+exercicios/aula_024/~$la_026.docx
+exercicios/aula_027/~$pregabilidade - Linkedin.docx
+exercicios/aula_027/~WRL2905.tmp
+exercicios/aula_027/empregabilidade - Linkedin.docx
