--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,6 @@ exercicios/aula_024/~$la_026.docx
 exercicios/aula_027/~$pregabilidade - Linkedin.docx
 exercicios/aula_027/~WRL2905.tmp
 exercicios/aula_027/empregabilidade - Linkedin.docx
+exercicios/~$a-javascript-dinamico.docx
+exercicios/~WRL1554.tmp
+exercicios/ada-javascript-dinamico.docx
