--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,63 @@ exercicios/aula_027/empregabilidade - Linkedin.docx
 exercicios/~$a-javascript-dinamico.docx
 exercicios/~WRL1554.tmp
 exercicios/ada-javascript-dinamico.docx
+exercicios/~$la de entrevista_01.docx
+exercicios/Aula de entrevista_01.docx
+exercicios/aula-04-ada-empregabilidade.docx
+exercicios/aula_037/~$la_037.docx
+exercicios/aula_037/~WRL0383.tmp
+exercicios/aula_037/~WRL0510.tmp
+exercicios/aula_037/aula_037.docx
+exercicios/aula_038/aula_038.docx
+exercicios/aula_039/~$la_039.docx
+exercicios/aula_039/aula_039.docx
+exercicios/aula_042/~$act router dom.docx
+exercicios/aula_042/React router dom.docx
+exercicios/aula_043/~$la_043.docx
+exercicios/aula_043/~WRL1850.tmp
+exercicios/aula_043/aula_043.docx
+exercicios/aula_044/~$la_044.docx
+exercicios/aula_044/aula_044.docx
+exercicios/react/react-udemy.docx
+exercicios/react/exercicio02/board-game-react/.eslintrc.cjs
+exercicios/react/exercicio02/board-game-react/index.html
+exercicios/react/exercicio02/board-game-react/package-lock.json
+exercicios/react/exercicio02/board-game-react/package.json
+exercicios/react/exercicio02/board-game-react/README.md
+exercicios/react/exercicio02/board-game-react/vite.config.js
+exercicios/react/exercicio02/board-game-react/src/Game.css
+exercicios/react/exercicio02/board-game-react/src/index.jsx
+exercicios/react/exercicio02/board-game-react/src/components/GameBoard.jsx
+exercicios/react/exercicio02/board-game-react/src/components/GameCircle.jsx
+exercicios/react/exercicio02/board-game-react/src/contexts/auth.jsx
+exercicios/react/game_system/.eslintrc.cjs
+exercicios/react/game_system/index.html
+exercicios/react/game_system/package-lock.json
+exercicios/react/game_system/package.json
+exercicios/react/game_system/README.md
+exercicios/react/game_system/vite.config.js
+exercicios/react/game_system/src/App.jsx
+exercicios/react/game_system/src/Main.jsx
+exercicios/react/game_system/src/pages/Home/index.jsx
+exercicios/react/game_system/src/pages/Home/styles.jsx
+exercicios/react/game_system/src/pages/Signin/index.jsx
+exercicios/react/game_system/src/pages/Signin/styles.jsx
+exercicios/react/game_system/src/pages/Signup/index.jsx
+exercicios/react/game_system/src/pages/Signup/styles.jsx
+exercicios/react/game_system/src/routes/index.jsx
+exercicios/react/game_system/src/styles/global.jsx
+exercicios/aula_034/protejo-vocabulario-ingles/index.html
+exercicios/aula_034/protejo-vocabulario-ingles/script.js
+exercicios/aula_037/package-lock.json
+exercicios/aula_037/my-project/.eslintrc.cjs
+exercicios/aula_037/my-project/index.html
+exercicios/aula_037/my-project/package-lock.json
+exercicios/aula_037/my-project/package.json
+exercicios/aula_037/my-project/README.md
+exercicios/aula_037/my-project/vite.config.js
+exercicios/aula_037/my-project/src/App.css
+exercicios/aula_037/my-project/src/App.jsx
+exercicios/aula_037/my-project/src/Calculator.jsx
+exercicios/aula_037/my-project/src/index.css
+exercicios/aula_037/my-project/src/main.jsx
+exercicios/aula_037/my-project/src/assets/react.svg
