--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,4 @@ exercicios/aula_037/my-project/src/Calculator.jsx
 exercicios/aula_037/my-project/src/index.css
 exercicios/aula_037/my-project/src/main.jsx
 exercicios/aula_037/my-project/src/assets/react.svg
+exercicios/react/~$act-udemy.docx
