--- a/exercicios/react/browser_gamer/package.json
+++ b/exercicios/react/browser_gamer/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
