--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,5 @@ exercicios/aula_037/my-project/src/index.css
 exercicios/aula_037/my-project/src/main.jsx
 exercicios/aula_037/my-project/src/assets/react.svg
 exercicios/react/~$act-udemy.docx
+exercicios/aula-06-ada-empregabilidade.docx
+exercicios/~$la-06-ada-empregabilidade.docx
